# RoboAlt

./: README.md  TODO.md  nosecone_curves.txt  robodev.sln  temp_sim.cpp  temp_sim.h
Firmware/: README.md  robodev.sln
Firmware/embedded/: embedded.ino  embedded.vcxproj  embedded.vcxproj.filters  resource.h
Firmware/flightTests/: 3DPME_29mm_H128_TriCities_9-2019.csv  3DPME_29mm_H180_TriCities_9-2019.csv  L3_shakedown.csv  processData_output.csv
Firmware/processDataTest/: processDataTest.cpp  processDataTest.vcxproj  processDataTest.vcxproj.filters
Firmware/textFileFormatting/: debug_full.txt
Firmware/unitTest/: unitTest.cpp  unitTest.vcxproj  unitTest.vcxproj.filters
FlightTests/: 3DPME_24mm_E9-8_TriCities_9-2019.csv  3DPME_29mm_H180_TriCities_9-2019.csv  L3_shakedown_v2.csv  rawData_formatTest.csv
Hardware/: README  README.md  altimeter-cache.lib  altimeter.bak  altimeter.pro
Hardware/KiCad/: altimeter-cache.lib  altimeter.bak  altimeter.dsn  altimeter.kicad_pcb  altimeter.kicad_pcb-bak  altimeter.net  altimeter.pro  altimeter.sch  altimeter.xml
Hardware/componentLibraries/: altimeterComponentSchematics.bak  altimeterComponentSchematics.dcm  altimeterComponentSchematics.lib
Interface/: 3DPME_29mm_v1.h5  3DPME_29mm_v1_part_hierarchy.h5  Interface.pyproj  RequiredPackages.txt  example.h5  file_io.py  filters.py  flight_phase.py  main_frame.py  motor_database.h5  simulation.py  simulation_engine.py  test.h5  test.json  test.py
Interface/InterfaceCore/: Database.h  InterfaceCore.vcxproj  InterfaceCore.vcxproj.filters  main.cpp
Interface/aerodynamic_forces/: aerodynamic_forces.py  atmosphere_model.py  drag_model_open_rocket.py  stability_model_open_rocket.py
Interface/core/: README.md  database.cpp  database.h  entity.cpp  entity.h  file_io.py  flight_phase.py  gravity_model.py  interface_core.filters  interface_core.vcxproj  main.cpp  serial_transfer.py  simulation_engine.py  test_rocket.py  thrust_curve_data_retrieve.py
Interface/cython/: cython.pyproj  instance.pyx  interface_core.cp37-win_amd64.pyd  material.pyx  part.pyx  python_wrappers.cpp  python_wrappers.pyx  rocket.pyx  simulation.pyx  stage.pyx  test.py
Interface/entities/: event_entities.py  flight_data_entities.py  motor_data_entities.py  rocket_entities.py
Interface/main_frame.build/: __constants.c  __frozen.c  __helpers.c  __helpers.h  __internal__.c  (+550 more)
flight_tests/: 3DPME_24mm_E9-8_TriCities_9-2019_v2.csv  3DPME_29mm_H128_TriCities_9-2019.csv  3DPME_29mm_H128_TriCities_9-2019_v2.csv  3DPME_29mm_H180_TriCities_9-2019_v2.csv  L3_shakedown.csv
hardware/: README.md
interface/: hdf5_database.py  interface.pyproj  main.py  scripted_29mm.py
interface/interface/core/cpp/python_binding/: CMakeLists.txt  interface_python_binding.vcxproj  interface_python_binding.vcxproj.filters
interface/interface/core/cpp/python_binding/binding/: binding_utils.h  py_atmosphere.cpp  py_binding.cpp  py_configuration.cpp  py_entity.cpp  py_entity_manager.cpp  py_experiment.cpp  py_flight.cpp  py_material.cpp  py_motor.cpp  py_part.cpp  py_part_bulkhead.cpp  py_part_fins.cpp  py_part_instance.cpp  py_part_nosecone.cpp  py_part_parachute.cpp  py_part_tube_body.cpp  py_rocket.cpp  py_simulation.cpp  py_stage.cpp
python_wrapper/: command_to_run.txt  rocket_core.cpp  test.py
(+556 files in other folders)
